minor z-index fixes

--- a/src/components/apps/css-colors/chart/Chart.scss
+++ b/src/components/apps/css-colors/chart/Chart.scss
@@ -60,6 +60,7 @@
       scale: 16;
       color: transparent;
       pointer-events: none;
+      z-index: 1;
     }
   }
   &__row {
