--- a/src/components/apps/css-colors/colorinfo/Colorinfo.scss
+++ b/src/components/apps/css-colors/colorinfo/Colorinfo.scss
@@ -68,6 +68,7 @@
       width: 100%;
       height: 100%;
       opacity: 1;
+      z-index: 2;
       transform: translateY(0) scale(1);
       transition-delay: var(--_show-info-duration);
     }
